--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/overlay.css">
+    <link rel="stylesheet" href="./css/overlay.css" />
     <link rel="stylesheet" href="./css/standard.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" href="./assets/icons/favicon.ico" />
@@ -14,8 +14,11 @@
     <main id="pokemonList"></main>
     <footer></footer>
     <div class="overlay d-none" id="overlay" onclick="closeOverlay()">
-      <div class="overlay-content" id="overlay-content" onclick="event.stopPropagation()">
-      </div>
+      <div
+        class="overlay-content"
+        id="overlay-content"
+        onclick="event.stopPropagation()"
+      ></div>
     </div>
 
     <script src="./js/script.js"></script>
