style: highlight active pagination button

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <body>
     <header></header>
     <main id="pokemonList"></main>
+    <div id="pagination" class="pagination"></div>
+
     <footer></footer>
     <div class="overlay d-none" id="overlay" onclick="closeOverlay()">
       <div
@@ -22,6 +24,7 @@
     </div>
 
     <script src="./js/script.js"></script>
+    <script src="./js/pagination.js"></script>
     <script src="./js/templates.js"></script>
   </body>
 </html>
