--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1>My Pokédex</h1>
         <input
           type="text"
-          id="searchInput"
+          id="search-input"
           placeholder="Search Pokémon..."
           oninput="searchPokemon()"
         />
