feat: add legal pages and styling (legal.css)

--- a/pages/impressum.html
+++ b/pages/impressum.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,8 +9,37 @@
     <title>Pokedex - Impressum</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+      <div class="header-content">
+        <img src="../assets/img/logo.png" alt="Pokedex Logo" class="logo" />
+        <h1>My Pokédex</h1>
+      </div>
+    </header>
+    <main>
+      <section class="legal-section">
+        <h1>Impressum</h1>
+        <p>
+          Diese Webseite wurde von <strong>Paul Gross</strong> im Rahmen eines
+          Lernprojekts der <strong>Developer Academy</strong> erstellt. Ziel war
+          es, mit der öffentlichen Pokémon-API (<a
+            href="https://pokeapi.co/"
+            target="_blank"
+            >PokeAPI</a
+          >) zu arbeiten und moderne Frontend-Techniken zu üben.
+        </p>
+        <p>
+          Design, Pagination, dynamische Overlays sowie Suchfunktionen wurden
+          vollständig mit HTML, CSS und JavaScript umgesetzt.
+        </p>
+        <p>Die Webseite dient ausschließlich Ausbildungszwecken.</p>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-links">
+        <a href="../pages/privacy-policy.html">Privacy Policy</a>
+        <span>•</span>
+        <a href="../pages/impressum.html">Impressum</a>
+      </div>
+    </footer>
   </body>
 </html>
