--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,8 +9,68 @@
     <title>Pokedex - Datenschutz</title>
   </head>
   <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+      <div class="header-content">
+        <img src="../assets/img/logo.png" alt="Pokedex Logo" class="logo" />
+        <h1>My Pokédex</h1>
+      </div>
+    </header>
+    <main>
+      <section class="legal-section">
+        <h1>Datenschutzerklärung</h1>
+        <p>
+          <strong>Paul Gross</strong><br />
+          Franz-Martin-Straße 4C<br />
+          49152 Bad Essen<br />
+          E-Mail: <a href="mailto:p.groß6408@gmail.com">p.gross6408@gmail.com</a>
+        </p>
+
+        <h2>Datenschutz</h2>
+        <p>
+          Diese Webseite ist ein Lernprojekt im Rahmen der
+          Developer Academy und ist auch auf Github öffentlich zugänglich. Es werden
+          <strong
+            >keinerlei personenbezogenen Daten von Besuchern gespeichert oder
+            verarbeitet</strong
+          >.
+        </p>
+        <p>
+          Es findet keine Nutzerregistrierung, kein Tracking, kein
+          Cookie-Einsatz und keine Analyse statt. Die Seite ruft lediglich
+          öffentlich zugängliche Daten von der
+          <a href="https://pokeapi.co/" target="_blank">PokeAPI</a> ab, um
+          Informationen zu Pokémon anzuzeigen. Dabei wird
+          <strong>keine Verbindung zu personenbezogenen Informationen</strong>
+          hergestellt.
+        </p>
+
+        <h2>Verwendete Inhalte</h2>
+        <ul>
+          <li>
+            <strong>API:</strong>
+            <a href="https://pokeapi.co/" target="_blank">pokeapi.co</a>
+          </li>
+          <li><strong>Icons:</strong> svg.com</li>
+          <li><strong>Bilder:</strong> Teilweise durch ChatGPT generiert</li>
+          <li>
+            <strong>Schriftart:</strong> Righteous (von google.fonts runtergeladen)
+          </li>
+        </ul>
+
+        <h2>Hinweis</h2>
+        <p>
+          Dieses Projekt dient ausschließlich <strong>Lernzwecken</strong> und
+          wird nicht kommerziell betrieben. Solltest du Fragen zum Datenschutz
+          haben, kannst du dich gerne per E-Mail an mich wenden.
+        </p>
+      </section>
+    </main>
+    <footer>
+      <div class="footer-links">
+        <a href="../pages/privacy-policy.html">Privacy Policy</a>
+        <span>•</span>
+        <a href="../pages/impressum.html">Impressum</a>
+      </div>
+    </footer>
   </body>
 </html>
