--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +12,7 @@
   <body>
     <header>
       <div class="header-content">
+        <a href="./index.html"></a>
         <img src="./assets/img/logo.png" alt="Pokedex Logo" class="logo" />
         <h1>My Pokédex</h1>
         <input
@@ -31,7 +32,7 @@
     <footer>
       <div id="pagination" class="pagination"></div>
       <div class="footer-links">
-        <a href="./pages/privacy-policy.html">Datenschutz</a>
+        <a href="./pages/privacy-policy.html">Privacy Policy</a>
         <span>•</span>
         <a href="./pages/impressum.html">Impressum</a>
       </div>
